# spotify-repairer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
spotify_repairer/: __main__.py  cli.py  manifest.py  repair.py
tests/: test_cli.py  test_manifest.py  test_repair.py
